manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "services-93c8"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "services-93c8"
  template:
    metadata:
      labels:
        app: "services-93c8"
    spec:
      containers:
        - name: "services-93c8"
          image: "mutualfundrepo.azurecr.io/services"
          ports:
          - containerPort: 80
